updated index page

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                 <li>
                     <a href="#" target="_blank">Closures</a>
                     <ul class="nav sec-nav">
-                        <li role="presentation" class="active"><a href="http://jsbin.com/rogehur/edit?js,console" target="_blank" title="Function that has reference to private variables">Stage 1</a></li>
+                        <li role="presentation" class="active"><a href="http://jsbin.com/rogehur/edit?js,console" target="_blank" title="Function that has reference to private variables">Example 1</a></li>
                         <!-- old link for stage 1 http://jsbin.com/godere/2/edit?js,console -->
-                        <li role="presentation"><a href="http://jsbin.com/godere/edit?js,console" target="_blank">Stage 2</a></li>
+                        <!-- <li role="presentation"><a href="http://jsbin.com/godere/edit?js,console" target="_blank">Stage 2</a></li> -->
                         <!-- old link for stage 2 http://jsbin.com/godere/3/edit?js,console,output -->
                         <li><a href="http://jsbin.com/godere/26/edit">Another variant</a></li>
                         <li role="presentation"><a href="http://jsbin.com/godere/27/edit?js,console" target="_blank">Real world Example</a></li>
