async related changes

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                 </li>
                 <li>
                     <a href="http://jsbin.com/qesajim/1/edit?js,console">Exceptions & Debugging</a>
+                    <ul>
+                        <li><a href="http://jsbin.com/gosomoc/1/edit?js,console">Simple Version</a></li>
+                        <li><a href="http://jsbin.com/minitoh/1/edit?js,console">Custom Exception - throw</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="http://jsbin.com/pugequ/edit?js,console,output" target="_blank">JSON</a>
