--- a/index.html
+++ b/index.html
@@ -177,21 +177,21 @@
                     <a href="#">Async Communication</a>
                     <ul class="nav sec-nav">
                         <li role="presentation" class="active"><a href="E:\My_Training_Lectures\js_generic\ajax_by_js">AJAX thru JS</a></li>
-                        <li role="presentation"><a href="E:\My_Training_Lectures\js_generic\ajax_jquery">AJAX thru jQuery</a></li>
+                        <!-- <li role="presentation"><a href="E:\My_Training_Lectures\js_generic\ajax_jquery">AJAX thru jQuery</a></li> -->
                     </ul>
                 </li>
                 <li>
                     <a href="">Cross-domain communication</a>
                     <ul class="nav sec-nav">
-                        <li role="presentation" class="active"><a href="http://codepen.io/arun_vijayarengan/pen/WGpXzN?editors=1010" title="http://hayageek.com/cross-domain-ajax-request-jquery/">JSONP</a></li>
-                        <li role="presentation"><a href="http://codepen.io/arun_vijayarengan/pen/vXxWVQ?editors=1010">CORS</a></li>
+                        <li role="presentation" class="active"><a href="https://jsfiddle.net/arunvijayarengan/nbtfaszq/1/" title="http://hayageek.com/cross-domain-ajax-request-jquery/">JSONP</a></li>
+                        <li role="presentation"><a href="https://codepen.io/arun_vijayarengan/pen/POgKLG">CORS</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#">JS in HTML5 Environment</a>
                     <ul class="nav sec-nav">
                         <li role="presentation" class="active"><a href="#">Storage API's</a></li>
-                        <li role="presentation"><a href="#">PostMessage API</a></li>
+                        <!-- <li role="presentation"><a href="#">PostMessage API</a></li> -->
                      </ul>
                 </li>
                 <!-- <li>
@@ -246,10 +246,17 @@
                     <ul>
                         <li role="presentation"><a href="http://jsbin.com/hirokogajo/1/edit?js,output" target="_blank">Fat Arrow Functions</a></li>
                         <li role="presentation"><a href="http://jsbin.com/wesemufimo/1/edit?js,output" target="_blank">Fat Arrow Functions and 'this'</a></li>
-                        <li role="presentation"><a href="https://plnkr.co/edit/IOn27jXdkd6OTGy9iwom?p=preview" target="_blank">Classes</a></li>
-                        <li role="presentation"><a href="https://plnkr.co/edit/fZ2jcI?p=preview" target="_blank">Inheritance - Stage 1</a></li>
-                        <li role="presentation"><a href="https://plnkr.co/edit/mpsXKXtMA0kqaOpYXItv?p=preview" target="_blank">Inheritance - Stage 2</a></li>
-                        <li role="presentation"><a href="https://plnkr.co/edit/TfRevcgWeXZQnV0uXOjV?p=preview" target="_blank">Inheritance - Stage 3</a></li>
+                        <li role="presentation"><a href="http://jsbin.com/jusiyih/1/edit?js,console" target="_blank">Classes</a></li>
+                        <li role="presentation"><a href="http://jsbin.com/kiqijih/1/edit?js,console" target="_blank">Inheritance - Stage 1</a></li>
+                        <li role="presentation"><a href="http://jsbin.com/botaco/1/edit?js,console" target="_blank">Inheritance - Stage 2</a></li>
+                        <li role="presentation"><a href="http://jsbin.com/wusucod/1/edit?js,console" target="_blank">Inheritance - Stage 3</a></li>
+                        <li><a href="http://jsbin.com/lijaxig/1/edit?js,console">Static Methods</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">Modules</a>
+                    <ul>
+                        <li role="presentation"><a href="http://jsbin.com/hirokogajo/1/edit?js,output" target="_blank">Fat Arrow Functions</a></li>
                     </ul>
                 </li>
                 <li>
