--- a/index.html
+++ b/index.html
@@ -236,34 +236,41 @@
                 <li>
                     <a href="#">ES 2015 </a>
                     <ul class="nav sec-nav">
-                        <li role="presentation" class="active"><a href="#" target="_blank">ES 2015 Intro</a></li>
-                        <li role="presentation"><a href="#" target="_blank">var, let and const </a></li>
+                        <li role="presentation" class="active">
+                            <a href="https://leanpub.com/understandinges6/read" target="_blank">ES 2015 Intro</a>
+                        </li>
                     </ul>
                 </li>
 
                 <li>
-                    <a href="#">ES6 - Continued</a>
                     <ul>
+                        <li><a href="http://jsbin.com/niyuqoh/1/edit?js,console">Let</a></li>
+                        <li><a href="http://jsbin.com/wazawog/1/edit?js,console">Let in for loop</a></li>
+                        <li><a href="http://jsbin.com/tazizuf/edit?js,console">Const</a></li>
+                        <li><a href="http://jsbin.com/piremar/edit?js,console">Const in Objects</a></li>
+                        <li><a href="http://jsbin.com/zevaqay/1/edit?js,console">Template Literal</a></li>
+                        <li><a href="http://jsbin.com/buseru/1/edit?js,console">Default Parameters</a></li>
+                        <li><a href="http://jsbin.com/bawibax/2/edit?js,console">Fat Arrow Functions</a></li>
                         <li role="presentation"><a href="http://jsbin.com/hirokogajo/1/edit?js,output" target="_blank">Fat Arrow Functions</a></li>
                         <li role="presentation"><a href="http://jsbin.com/wesemufimo/1/edit?js,output" target="_blank">Fat Arrow Functions and 'this'</a></li>
+                        <li><a href="http://jsbin.com/lisuyoj/edit?js,console">Object Destructuring</a></li>
+                        <li><a href="http://jsbin.com/winafuq/2/edit?js,console">Array Destructuring</a></li>
                         <li role="presentation"><a href="http://jsbin.com/jusiyih/1/edit?js,console" target="_blank">Classes</a></li>
                         <li role="presentation"><a href="http://jsbin.com/kiqijih/1/edit?js,console" target="_blank">Inheritance - Stage 1</a></li>
                         <li role="presentation"><a href="http://jsbin.com/botaco/1/edit?js,console" target="_blank">Inheritance - Stage 2</a></li>
                         <li role="presentation"><a href="http://jsbin.com/wusucod/1/edit?js,console" target="_blank">Inheritance - Stage 3</a></li>
                         <li><a href="http://jsbin.com/lijaxig/1/edit?js,console">Static Methods</a></li>
+                        <li><a href="http://jsbin.com/muwipug/2/edit?js,console">Promises</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="">Modules</a>
                     <ul>
-                        <li role="presentation"><a href="http://jsbin.com/hirokogajo/1/edit?js,output" target="_blank">Fat Arrow Functions</a></li>
+                        <li role="presentation"><a href="http://jsbin.com/jetugod/edit?js,console" target="_blank">Exporting Modules</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#">Node Js and NPM</a>
-                </li>
-                <li>
-                    <a href="#">Gulp</a>
                 </li>
                 <li>
                     <a href="#">Setup</a>
