--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <li role="presentation"><a href="http://jsbin.com/botaco/1/edit?js,console" target="_blank">Inheritance - Stage 2</a></li>
                         <li role="presentation"><a href="http://jsbin.com/wusucod/1/edit?js,console" target="_blank">Inheritance - Stage 3</a></li>
                         <li><a href="http://jsbin.com/lijaxig/1/edit?js,console">Static Methods</a></li>
-                        <li><a href="http://jsbin.com/muwipug/2/edit?js,console">Promises</a></li>
+                        <li><a href="http://jsbin.com/jisuficanu/edit?js,console">Promises</a></li>
                     </ul>
                 </li>
                 <li>
