--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                         <!-- <li role="presentation"><a href="http://jsbin.com/godere/edit?js,console" target="_blank">Stage 2</a></li> -->
                         <!-- old link for stage 2 http://jsbin.com/godere/3/edit?js,console,output -->
                         <li><a href="http://jsbin.com/godere/26/edit">Another variant</a></li>
+                        <li><a href="https://jsbin.com/rogehur/edit?js,console">Applying Coupon Example</a></li>
                         <li role="presentation"><a href="http://jsbin.com/godere/27/edit?js,console" target="_blank">Real world Example</a></li>
                         <!-- <li role="presentation"><a href="http://jsbin.com/godere/7/edit?js,console,output" target="_blank">Self Executing Closure</a></li> -->
                         <li role="presentation" class="hide"><a href="http://jsbin.com/godere/28/edit?js,console" target="_blank">Interesting Closure</a></li>
